# OnTimeApp.API/OnTimeApp.API/Data/Entities/CheckInRecord.cs
@@ -9,6 +9,8 @@ namespace OnTimeApp.API.Entities
         public string Info { get; set; }
         public DateTime UtcDateTime { get; set; }
         public IdentityUser User { get; set; }
+        public bool Location { get; set; }
+        public bool EndDay { get; set; }
 
         public CheckInRecord() 
         {
