# OnTimeApp.API/OnTimeApp.API/Data/Results/CheckInResult.cs
@@ -7,6 +7,9 @@ namespace OnTimeApp.API.Data.Results
         public string EmailOwner { get; set; }
         public string Info { get; set; }
         public DateTime UtcDateTime { get; set; }
+        public bool Location { get; set; }
         public string Id { get; set; }
+
+        public bool EndDay { get; set; }
     }
 }
