# OnTimeApp.API/OnTimeApp.API/Services/CheckInRecordService.cs
@@ -2,6 +2,7 @@
 using System.Linq;
 using System.Threading.Tasks;
 using Microsoft.AspNetCore.Identity;
+using OnTimeApp.API.Contracts.V1.Responses;
 using OnTimeApp.API.Data.Results;
 using OnTimeApp.API.Entities;
 using OnTimeApp.API.Entities.DAL;
@@ -25,12 +26,14 @@ namespace OnTimeApp.API.Services
             return new ResultSet<CheckInResult>()
             {
                 Success = true,
-                Results = res.Select(x => new CheckInResult
+                Results = res.OrderBy(x=> x.UtcDateTime).Select(x => new CheckInResult
                 {
                     Success = true,
                     EmailOwner = x.User.Email,
                     Info = x.Info,
-                    UtcDateTime = x.UtcDateTime
+                    UtcDateTime = x.UtcDateTime,
+                    Location = x.Location,
+                    EndDay = x.EndDay
                 })
             };
         }
@@ -51,12 +54,14 @@ namespace OnTimeApp.API.Services
             return new ResultSet<CheckInResult>
             {
                 Success = true,
-                Results = checkIns.Select(x =>
+                Results = checkIns.OrderBy(x=> x.UtcDateTime).Select(x =>
                     new CheckInResult
                     {
                         Success = true,
                         Info = x.Info,
-                        UtcDateTime = x.UtcDateTime
+                        UtcDateTime = x.UtcDateTime,
+                        Location = x.Location,
+                        EndDay = x.EndDay
                     })
             };
         }
@@ -77,17 +82,20 @@ namespace OnTimeApp.API.Services
             return new ResultSet<CheckInResult>
             {
                 Success = true,
-                Results = checkIns.Select(x =>
+                Results = checkIns.OrderBy(x=> x.UtcDateTime).Select(x =>
                     new CheckInResult
                     {
                         Success = true,
                         Info = x.Info,
-                        UtcDateTime = x.UtcDateTime
+                        UtcDateTime = x.UtcDateTime,
+                        Location = x.Location,
+                        EndDay = x.EndDay
                     })
             };
         }
 
-        public async Task<CheckInResult> RegisterCheckInAsync(string email, string info, DateTime utcDateTime)
+        public async Task<CheckInResult> RegisterCheckInAsync(string email, string info, DateTime utcDateTime,
+            bool location, bool endDay)
         {
             var user = await _userManager.FindByEmailAsync(email);
             if (user == null)
@@ -99,7 +107,25 @@ namespace OnTimeApp.API.Services
                 };
             }
 
-            var insert = new CheckInRecord {User = user, Info = info, UtcDateTime = utcDateTime};
+            var checkIns = await _checkinManager.FindByUserEmailAndDateAsync(email, utcDateTime);
+            var alreadyEnded = checkIns.Any(x => x.EndDay);
+            if (alreadyEnded)
+            {
+                return new CheckInResult
+                {
+                    Errors = new[] {"Already finished current working day"}
+                };
+            }
+
+            if ((checkIns.Count() + 1) % 2 != 0 && endDay)
+            {
+                return new CheckInResult
+                {
+                    Errors = new[] {"Cannot end your day, previous check ins are missing"}
+                };
+            }
+
+            var insert = new CheckInRecord {User = user, Info = info, UtcDateTime = utcDateTime, Location = location, EndDay = endDay};
 
             bool added = await _checkinManager.AddRecord(insert);
             if (added)
@@ -110,13 +136,67 @@ namespace OnTimeApp.API.Services
                     Id = insert.Id,
                     Info = info,
                     UtcDateTime = utcDateTime,
-                    EmailOwner = email
+                    EmailOwner = email,
+                    Location = location,
+                    EndDay = endDay
                 };
             }
 
             return new CheckInResult
             {
                 Success = false
+            };
+        }
+        
+
+        public async Task<WorkedTimeResult> WorkedTimeOnDayAsync(string email, DateTime date)
+        {
+            var user = await _userManager.FindByEmailAsync(email);
+            if (user == null)
+            {
+                return new WorkedTimeResult
+                {
+                    Success = false,
+                    Errors = new string[] {"User email does not exits"}
+                };
+            }
+            var checkin = await _checkinManager.FindByUserEmailAndDateAsync(email, date);
+            var checkInList = checkin.ToList();
+            bool endDay = checkInList.Any(x => x.EndDay);
+            if (!endDay)
+            {
+                return new WorkedTimeResult
+                {
+                    Success = false,
+                    Errors = new string[] {"Too soon to calculate, the day did not ended yet"}
+                };
+            }
+
+            
+            long ticks = 0;
+            try
+            {
+                int i = 0;
+                while (i < checkInList.Count - 1)
+                {
+                    ticks += checkInList[i + 1].UtcDateTime.Ticks - checkInList[i].UtcDateTime.Ticks;
+                    i += 2;
+                }
+            }
+            catch (Exception e)
+            {
+                return new WorkedTimeResult
+                {
+                    Success = false,
+                    Errors = new string[] {$"Some check ins are missing, processed ${checkInList.Count}"}
+                };
+            }
+
+
+            return new WorkedTimeResult
+            {
+                Success = true,
+                WorkedTime = new TimeSpan(ticks)
             };
         }
     }
