# generated/api-definition.json
@@ -101,6 +101,82 @@
         }
       }
     },
+    "/api/v1/CheckInRecords/WorkedTime/{email}/{date}": {
+      "get": {
+        "tags": [
+          "CheckInRecords"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "email",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "path",
+            "name": "date",
+            "required": true,
+            "type": "string",
+            "format": "date-time"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/WorkedTimeResponse"
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/CheckInRecords/Register": {
+      "post": {
+        "tags": [
+          "CheckInRecords"
+        ],
+        "consumes": [
+          "application/json-patch+json",
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/CheckInResgistrationRequest"
+            }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/CheckInResponse"
+            }
+          }
+        }
+      }
+    },
     "/api/v1/Identity/init": {
       "post": {
         "tags": [
@@ -384,6 +460,13 @@
           "format": "date-time",
           "type": "string"
         },
+        "location": {
+          "description": "If true location is assume else, wifi",
+          "type": "boolean"
+        },
+        "endDay": {
+          "type": "boolean"
+        },
         "errors": {
           "description": "Set of errors that can potentially occur",
           "type": "array",
@@ -415,6 +498,57 @@
         },
         "success": {
           "description": "If the request was succesfull or not",
+          "type": "boolean"
+        }
+      }
+    },
+    "WorkedTimeResponse": {
+      "type": "object",
+      "properties": {
+        "hours": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "minutes": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "errors": {
+          "description": "Set of errors that can potentially occur",
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "success": {
+          "description": "If the request was succesfull or not",
+          "type": "boolean"
+        }
+      }
+    },
+    "CheckInResgistrationRequest": {
+      "required": [
+        "endDay",
+        "info",
+        "location",
+        "userEmail"
+      ],
+      "type": "object",
+      "properties": {
+        "userEmail": {
+          "type": "string"
+        },
+        "info": {
+          "type": "string"
+        },
+        "location": {
+          "type": "boolean"
+        },
+        "utcDateTime": {
+          "format": "date-time",
+          "type": "string"
+        },
+        "endDay": {
           "type": "boolean"
         }
       }
